--- a/views/index.html
+++ b/views/index.html
@@ -6,4 +6,6 @@
 		<h1>
 			Just Serving some HTML
 		</h1>
+		<p>Deployed the application with Heroku</p>
+		<p>Also enabled automatic deployment of master branch</p>
 </body>
