Automatically deploy review apps for pull request

--- a/views/index.html
+++ b/views/index.html
@@ -8,4 +8,6 @@
 		</h1>
 		<p>Deployed the application with Heroku</p>
 		<p>Also enabled automatic deployment of master branch</p>
+		<br>
+		<p>added the ability to automatically deploy review apps for all the pull request</p>
 </body>
